# TP_4_C

./: .gitignore  .travis.yml  B3425.tar  CMakeLists.txt  Make  Makefile  README.md
Compte Rendu/: B3425Compte-rendu.tex
Tests/: Liste_des_Tests  Liste_des_Tests~  results.csv
Tests/Test01/: cmd~  run~  std.out~
Tests/Test02/: description~  std.out~
Tests/Test03/: cmd  description  run~  std.out~
Tests/Test04/: cmd  run~  std.out~
Tests/Test05/: description~  std.out~
Tests/Test06/: run~  std.out~
Tests/Test07/: cmd~  std.out~
Tests/Test08/: cmd  description  std.out~
Tests/Test09/: cmd~  description  run~  std.out~
Tests/Test1/: description~  run  run~  std.out~
Tests/Test10/: cmd  cmd~  description
Tests/Test11/: description
doc/: .gitignore  Perfs_B3425.tex
perf/: Ajout.ods  Ajout_cercle.ods  EcritTest1.cpp  EcritTest2.cpp  loadSave.sh  moyenne.cpp  moyenne2.cpp  testPerformance.sh
src/: Cercle.cpp  Cercle.h  CmdAjout.cpp  CmdAjout.h  CmdAjoutCercle.cpp  CmdAjoutCercle.h  CmdAjoutPolyligne.cpp  CmdAjoutPolyligne.h  CmdClear.cpp  CmdClear.h  CmdDelete.cpp  CmdDelete.h  CmdLoad.cpp  CmdLoad.h  CmdMove.cpp  CmdMove.h  CmdSave.cpp  CmdSave.h  CmdSimple.cpp  CmdSimple.h  CmdSuppression.cpp  CmdSuppression.h  Commande.cpp  Commande.h  Forme.cpp  Forme.h  Heure.h  Ligne.cpp  Ligne.h  Modele.cpp  Modele.h  Point.cpp  Point.h  Polyligne.cpp  Polyligne.h  Rectangle.cpp  Rectangle.h  Selection.cpp  Selection.h  geoEdit.cpp  (+1 more)
tests/: .gitignore  B3425  Liste_des_Tests.txt  Readme.md  mktest.sh  printCSV.py  results.csv  run  test.sh
(+78 files in other folders)
